public class BangunDatar {
    public double luas() {
        System.out.println("Menghitung luas bangun datar...");
        return 0;
    }

    public double keliling() {
        System.out.println("Menghitung keliling bangun datar...");
        return 0;
    }
}
